fixed centering issue

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mdb-vue-ui-kit": "^4.1.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
